# uni60

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
tests/: test_uni60.py
uni60/: __init__.py  checksum.py  core.py  generator.py
website/: about.html  acquire.html  index.html  intelligence.html  portfolio.html  seo-strategy.md  strategy.md
