[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "uni60"
version     = "1.0.0"
description = "HEXAGEN-60: Hierarchical Unicode Base-60 encoding for distributed systems identification"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"
keywords    = [
    "base60", "sexagesimal", "uuid", "identifier", "encoding",
    "distributed-systems", "unicode", "hexagen60", "ulid",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Database",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage      = "https://github.com/taylordynasty/uni60"
Documentation = "https://github.com/taylordynasty/uni60#readme"
Repository    = "https://github.com/taylordynasty/uni60"
Issues        = "https://github.com/taylordynasty/uni60/issues"

[tool.setuptools.packages.find]
include = ["uni60*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict         = true
